2010-08-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15388: [Caching framework] Remove default settings for cache configuration
	* Fixed bug #15180: [Unit tests] t3lib_iconWorks and t3lib_SpriteManager (Thanks to Fabien Udriot)
	* Follow-up to feature #15141: Add tests to t3lib_db to test storing of binary data (Thanks to Steffen Kamper)
	* Added feature #15141: [Caching framework] Add compress data options to DbBackend
	* Fixed bug #15383: [Unit tests] Add tests for t3lib_div::validEmail
	* Fixed bug #15382: [Unit tests] Streamline and refactor t3lib_divTest

2010-08-10  Bernhard Kraft  <kraftb@think-open.at>

	* Fixed bug #15395: Code cleanup for t3lib_compressor

2010-08-09  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to bug #15079: Add XCLASS-definitions to spritemanager classes
	* Fixed bug #15403: Missing icons in workspace modules (swap version) (Thanks to Georg Ringer)
	* Follow-up to bug #15079: Change private to protected
	* Fixed bug #15397: Fix special chars in class.t3lib_div.php

2010-08-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15323: Small typo in class.t3lib_spritemanager.php's deprecationLog Message (Thanks to Sven Juergens)
	* Follow-up to bug #15104: Fixed parse error

2010-08-08  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15079 Feature: TYPO3 misses an SpriteGenerator (Thanks to Steffen Ritter)

2010-08-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12535: DAM-related: Element browser crashes as where-clause cannot be parsed

2010-08-08  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15104: Validation erros in tstemplate (Thanks to Georg Ringer)
	* Fixed bug #15394: Improve t3lib_SpriteManager code comments
	* Fixed bug #7901: Workaround for PHP bug with Locale tr_TR (Thanks to Reinhard Führicht)

2010-08-08  Susanne Moog  <typo3@susanne-moog.de>
