@@ -123,6 +123,7 @@ $TYPO3_CONF_VARS = array(
 			),
 			'cacheConfigurations' => array(
 				'cache_hash' => array(
+					'frontend' => 't3lib_cache_frontend_VariableFrontend',
 					'backend' => 't3lib_cache_backend_DbBackend',
 					'options' => array(
 						'cacheTable' => 'cachingframework_cache_hash',
@@ -130,6 +131,7 @@ $TYPO3_CONF_VARS = array(
 					)
 				),
 				'cache_pages' => array(
+					'frontend' => 't3lib_cache_frontend_VariableFrontend',
 					'backend' => 't3lib_cache_backend_DbBackend',
 					'options' => array(
 						'cacheTable' => 'cachingframework_cache_pages',
@@ -137,6 +139,7 @@ $TYPO3_CONF_VARS = array(
 					)
 				),
 				'cache_pagesection' => array(
+					'frontend' => 't3lib_cache_frontend_VariableFrontend',
 					'backend' => 't3lib_cache_backend_DbBackend',
 					'options' => array(
 						'cacheTable' => 'cachingframework_cache_pagesection',
